      Scan once, duplicate the section data, and scan again.
  * apt/package.py:
    - Create a string class BaseDependency.__dstr which makes '>' equal to
      '>>' and '<' equal to '<<' (compatibility).
    - Use the binary package version in Version.fetch_source() if the
      source version is not specified (i.e. in the normal case).
  * apt/progress/text.py:
    - Drop InstallProgress, it's useless to keep this alias around.
  * apt/progress/old.py:
    - Let the new method call the old one; e.g. status_update() now calls
      self.statusUpdate(). This improves compatibility for sub classes.
  * Merge with Ubuntu:
    - util/get_ubuntu_mirrors_from_lp.py:
      + rewritten to use +archivemirrors-rss and feedburner
    - pre-build.sh: update ubuntu mirrors on bzr-buildpackage (and also do this
      for Debian mirrors)
    - add break for packagekit-backend-apt (<= 0.4.8-0ubuntu4)
  * tests/data/aptsources/sources.list.testDistribution:
    - change one mirror which is not on the mirror list anymore.

 -- Julian Andres Klode <jak@debian.org>  Mon, 01 Mar 2010 16:13:22 +0100

python-apt (0.7.93.3) unstable; urgency=low

  * data/templates/Ubuntu.info.in:
    - Use generic MirrorsFile key instead of per-architecture ones in
      order to fix FTBFS on !amd64 !i386 (Closes: #571752)

 -- Julian Andres Klode <jak@debian.org>  Sat, 27 Feb 2010 23:26:45 +0100

python-apt (0.7.93.2) unstable; urgency=low

  [ Julian Andres Klode ]
  * Fix some places where the old API was still used:
    - apt/utils.py: Completely ported, previous one was old-API from Ubuntu.
    - apt/cache.py: Use the new progress classes instead of the old ones.
    - apt/package.py: Various smaller issues fixed, probably caused by merge.
  * utils/migrate-0.8.py:
    - Improve C++ parsing and add apt.progress.old to the modules, reduces
      false positives.
    - Ship the list of deprecated things in the apt_pkg and apt_inst modules