@@ -12,6 +12,7 @@ python-apt (0.7.93.4) unstable; urgency=low
       '>>' and '<' equal to '<<' (compatibility).
     - Use the binary package version in Version.fetch_source() if the
       source version is not specified (i.e. in the normal case).
+    - Always return unicode strings in Package.get_changelog (Closes: #572998).
   * apt/progress/text.py:
     - Drop InstallProgress, it's useless to keep this alias around.
   * apt/progress/old.py:
